<resources>
    <string name="app_name">FragmentPractice2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Имя:</string>
    <string name="second_name">Фамилия:</string>
    <string name="phone_number">Телефон:</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="edit_user">Редактировать данные пользователя</string>
    <string name="user_info">Данные пользователя</string>
</resources>